# midnight_fetcher_bot_public

./: README.md
app/: layout.tsx
app/api/diagnostics/test-endpoints/: route.ts
app/api/mining/retry/: route.ts
app/api/version/: route.ts
app/mining/: page.tsx
app/mining/history/: page.tsx
hashengine/: Cargo.toml  README.md  build.cmd  build.sh
hashengine/performance/: OPTIMIZATIONS_IMPLEMENTED-V1.md  benchmark-results-1762553469814.json  benchmark-results-1762553552050.json  benchmark.js  compare-performance.js  postUpgrade-benchmark-results-1762551640576.json  preUpgrade-benchmark-results-1762552233805.json
lib/: version.ts
lib/devfee/: manager.ts
lib/mining/: orchestrator.ts
